added complementary camera

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,5 +6,7 @@
 <body>
   <h3>Camera Live Streaming</h3>
   <img src="{{ url_for('video_feed') }}">
+  <h3>Complementary Color</h3>
+  <img src="{{ url_for('complement_feed') }}">
 </body>
 </html>
